--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,7 @@
     "@cloudscape-design/components": "^3.0.932",
     "@cloudscape-design/design-tokens": "^3.0.52",
     "@cloudscape-design/global-styles": "^1.0.38",
+    "axios": "^1.8.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router": "^7.4.1"
