--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -13,6 +13,9 @@
     "@cloudscape-design/components": "^3.0.932",
     "@cloudscape-design/design-tokens": "^3.0.52",
     "@cloudscape-design/global-styles": "^1.0.38",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
